revert static.yaml changes