@@ -1,7 +1,7 @@
 package com.pennhacks.ecolens.controller;
 
-
-import org.springframework.core.io.UrlResource;
+import org.springframework.core.io.ClassPathResource;
+import org.springframework.core.io.Resource;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
@@ -9,101 +9,44 @@ import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.io.IOException;
-import java.net.MalformedURLException;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
+import java.io.InputStream;
 
 @RestController
 public class HomeController {
 
     @GetMapping("/index")
     public ResponseEntity<byte[]> getIndexPage() {
-        try {
-            // Specify the path to your HTML file
-            Path path = Paths.get("src/main/resources/static/index.html");
-
-            // Create a UrlResource from the path
-            UrlResource resource = new UrlResource(path.toUri());
-
-            // Check if the resource exists
-            if (resource.exists()) {
-                // Read the HTML file into a byte array
-                byte[] bytes = Files.readAllBytes(path);
-
-                // Serve the HTML file with the appropriate content type
-                return ResponseEntity.ok()
-                        .contentType(MediaType.TEXT_HTML)
-                        .body(bytes);
-            } else {
-                // Handle the case where the HTML file is not found
-                return ResponseEntity.notFound().build();
-            }
-        } catch (MalformedURLException e) {
-            // Handle a malformed URL exception
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).build();
-        } catch (IOException e) {
-            // Handle an IO exception
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).build();
-        }
+        return getStaticResource("static/index.html");
     }
 
     @GetMapping("/")
     public ResponseEntity<byte[]> getIntroPage() {
-        try {
-            // Specify the path to your HTML file
-            Path path = Paths.get("src/main/resources/static/intro.html");
-
-            // Create a UrlResource from the path
-            UrlResource resource = new UrlResource(path.toUri());
-
-            // Check if the resource exists
-            if (resource.exists()) {
-                // Read the HTML file into a byte array
-                byte[] bytes = Files.readAllBytes(path);
-
-                // Serve the HTML file with the appropriate content type
-                return ResponseEntity.ok()
-                        .contentType(MediaType.TEXT_HTML)
-                        .body(bytes);
-            } else {
-                // Handle the case where the HTML file is not found
-                return ResponseEntity.notFound().build();
-            }
-        } catch (MalformedURLException e) {
-            // Handle a malformed URL exception
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).build();
-        } catch (IOException e) {
-            // Handle an IO exception
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).build();
-        }
+        return getStaticResource("static/intro.html");
     }
 
     @GetMapping("/dashboard")
     public ResponseEntity<byte[]> getDashboardPage() {
+        return getStaticResource("static/dashboard.html");
+    }
+
+    private ResponseEntity<byte[]> getStaticResource(String resourcePath) {
         try {
-            // Specify the path to your HTML file
-            Path path = Paths.get("src/main/resources/static/dashboard.html");
+            // Load the resource from the classpath
+            Resource resource = new ClassPathResource(resourcePath);
 
-            // Create a UrlResource from the path
-            UrlResource resource = new UrlResource(path.toUri());
-
-            // Check if the resource exists
             if (resource.exists()) {
-                // Read the HTML file into a byte array
-                byte[] bytes = Files.readAllBytes(path);
+                try (InputStream inputStream = resource.getInputStream()) {
+                    byte[] bytes = inputStream.readAllBytes();
 
-                // Serve the HTML file with the appropriate content type
-                return ResponseEntity.ok()
-                        .contentType(MediaType.TEXT_HTML)
-                        .body(bytes);
+                    // Serve the HTML file with the appropriate content type
+                    return ResponseEntity.ok()
+                            .contentType(MediaType.TEXT_HTML)
+                            .body(bytes);
+                }
             } else {
                 // Handle the case where the HTML file is not found
                 return ResponseEntity.notFound().build();
             }
-        } catch (MalformedURLException e) {
-            // Handle a malformed URL exception
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).build();
         } catch (IOException e) {
             // Handle an IO exception
             return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).build();
